# csx

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: release.yml
Casks/: csx.rb
contrib/ccswitch/: README.md  ccswitch.fish
contrib/fish/: README.md  csx-pick.fish
src/: analyze.rs  chat_shim.rs  cli.rs  cli_shim.rs  clock_shim.rs  daemon.rs  embed.rs  embed_shim.rs  error.rs  git_shim.rs  index.rs  lib.rs  main.rs  mcp.rs  mcp_shim.rs  model.rs  output.rs  rag.rs  repo.rs  transport_shim.rs  watch_shim.rs
src/db/: mod.rs
src/source/: claude.rs  codex.rs  fileid.rs  jsonl.rs  mod.rs
tests/fixtures/claude/: .claude.json
tests/fixtures/claude/projects/acme-api/sessions/: session-docs.jsonl  session-main.jsonl
tests/fixtures/codex/sessions/2026/07/04/: rollout-main.jsonl
