[package]
name = "csx"
version = "0.1.0"
edition = "2021"
description = "Fast local full-text and hybrid search over AI-coding session transcripts."
license = "MIT"

[lib]
name = "csx"
path = "src/lib.rs"

[[bin]]
name = "csx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = { version = "4.5.7", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
ureq = { version = "2.9.7", features = ["json"] }
notify = "6.1.1"
sha2 = "0.10.8"
walkdir = "2.5.0"

[profile.test]
opt-level = 0
debug = true
